# donet

./: .codecov.yml  .deny.toml  .dockerignore  .editorconfig  .gitignore  .gitlab-ci.yml  .rustfmt.toml  .typos.toml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS  CONTRIBUTORS.md  COPYING  Cargo.toml  Dockerfile  README.md  SECURITY.md  build.rs  daemon.example.toml  docker-compose.yml  meson.build  meson_options.txt  rust-toolchain.toml
bevy_donet/: Cargo.toml  README.md
bevy_donet/src/: client_repository.rs  lib.rs
docs/: .gitignore  01-Introduction.md  02-Services.md  03-DCLanguage.md  404.rst  CNAME  README.md  conduct.rst  conf.py  conf.py.in  crates.js  dclanguage.rst  glossary.rst  help.html  index.html  index.rst  library.rst  license.rst  meson.build  requirements.txt  search-index.js  settings.html  src-files.js
docs/_static/css/: donet.css  header.css  modern-normalize.css  utils.css
docs/_templates/: .gitignore  layout.html  layout.html.in  searchbox.html  versions.html
docs/dclanguage/: abstract.rst  error-codes.rst  grammar.rst  index.rst  lexical.rst
docs/gettingstarted/: building-linux.rst  building-windows.rst  configuration.rst  index.rst
docs/images/: cluster_diagram.drawio
docs/implementors/strum/: trait.IntoEnumIterator.js
docs/internal/: debugging.rst  guidelines.rst  index.rst  inspiration.rst  motivation.rst  security.rst  unittesting.rst
docs/introduction/: cluster_diagram.drawio  dclanguage.rst  fundamentals.rst  index.rst  overview.rst  resources.rst  services.rst  view_diagram.drawio
docs/libdonet/: all.html  fn.read_dc_files.html  index.html  sidebar-items.js
docs/libdonet/byte_order/: fn.swap_le_16.html  fn.swap_le_32.html  fn.swap_le_64.html  index.html  sidebar-items.js
docs/libdonet/datagram/: index.html  sidebar-items.js  struct.Datagram.html  struct.DatagramIterator.html
docs/libdonet/dcarray/: index.html  sidebar-items.js  struct.DCArrayType.html  trait.DCArrayTypeInterface.html
docs/libdonet/dcatomic/: index.html  sidebar-items.js  struct.DCAtomicField.html  trait.DCAtomicFieldInterface.html
docs/libdonet/dcfield/: enum.ClassField.html  enum.StructField.html  index.html  sidebar-items.js  struct.DCField.html  trait.DCFieldInterface.html
docs/libdonet/dcfile/: index.html  sidebar-items.js  struct.DCFile.html  struct.DCImport.html  trait.DCFileInterface.html
docs/libdonet/dckeyword/: enum.IdentifyKeyword.html  index.html  sidebar-items.js  struct.DCKeyword.html  struct.DCKeywordList.html  trait.DCKeywordInterface.html  trait.DCKeywordListInterface.html  type.HistoricalFlag.html  type.KeywordName2Keyword.html
docs/libdonet/dclass/: index.html  sidebar-items.js  struct.DClass.html  trait.DClassInterface.html  type.FieldId2Field.html  type.FieldName2Field.html
docs/libdonet/dclexer/: enum.DCToken.html  index.html  sidebar-items.js  struct.Lexer.html  struct.Span.html
docs/libdonet/dcmolecular/: index.html  sidebar-items.js  struct.DCMolecularField.html  trait.DCMolecularFieldInterface.html
docs/libdonet/dcnumeric/: index.html  sidebar-items.js  struct.DCNumericRange.html  struct.DCNumericType.html  trait.DCNumericTypeInterface.html
docs/libdonet/dcparameter/: index.html  sidebar-items.js  struct.DCParameter.html  trait.DCParameterInterface.html
docs/libdonet/dcparser/: fn.parse.html  index.html
docs/libdonet/dcstruct/: index.html  sidebar-items.js  struct.DCStruct.html
docs/libdonet/dctype/: enum.DCNumberType.html  enum.DCTypeEnum.html  index.html  sidebar-items.js  struct.DCNumber.html  struct.DCTypeDefinition.html  trait.DCTypeDefinitionInterface.html  union.DCNumberValueUnion.html
docs/libdonet/globals/: constant.BCHAN_CLIENTS.html  constant.BCHAN_DBSERVERS.html  constant.BCHAN_STATESERVERS.html  constant.CHANNEL_MAX.html  constant.CONTROL_CHANNEL.html  constant.DG_SIZE_MAX.html  constant.DOID_MAX.html  constant.INVALID_CHANNEL.html  constant.INVALID_DOID.html  constant.ZONE_BITS.html  constant.ZONE_MAX.html  enum.DCReadError.html  enum.DgError.html  enum.Protocol.html  fn.msg_type.html  index.html  sidebar-items.js  static.DC_MULTIPLE_INHERITANCE.html  static.DC_SORT_INHERITANCE_BY_FILE.html  static.DC_VIEW_SUFFIXES.html  type.Channel.html  (+15 more)
docs/protocol/: client.rst  clientagent.rst  dbserver.rst  encapsulation.rst  eventlogger.rst  index.rst  messagedirector.rst  osi_layers.odp  stateserver.rst
donet/: Cargo.toml  README.md  build.rs  meson.build
donet-core/: Cargo.toml  README.md
donet-core/src/: dcatomic.rs  dcfield.rs  dcfile.rs  dckeyword.rs  dclass.rs  dcmolecular.rs  dcnumeric.rs  dcparameter.rs  dcstruct.rs  dcswitch.rs  dctype.rs  globals.rs  hashgen.rs  lib.rs  protocol.rs
donet-core/tests/: dc_language.rs
donet-daemon/: Cargo.toml  README.md  meson.build
donet-daemon/src/: .gitignore  config.rs  event.rs  lib.rs  logger.rs  service.rs  subscriber.rs
donet-database/: Cargo.toml  README.md
donet-database/src/: lib.rs
donet-event-logger/: Cargo.toml  Dockerfile  README.md
donet-event-logger/src/: lib.rs  msgpack.rs
donet-message-director/: Cargo.toml  Dockerfile  README.md
donet-message-director/src/: channel_map.rs  lib.rs  subscriber.rs  upstream.rs
donet-network/: Cargo.toml  README.md
donet-network/src/: lib.rs  tcp.rs  udp.rs
donet-wcp/: Cargo.toml  README.md
donet-wcp/assets/: icon.rgba
donet-wcp/src/: l10n.rs  main.rs  style.rs  wizard.rs
donet/src/: .gitignore  channel_map.rs  config.rs  dbserver.rs  event.rs  logger.rs  main.rs  meson.rs.in  network.rs  service.rs  service_factory.rs  utils.rs
functional-tests/: Cargo.toml  README.md
functional-tests/tests/: dc_file.dc  dc_file.rs  dc_file.toml  dc_language.rs  el.rs  el.toml  event_logger.rs  md.rs  md.toml
libdonet/: Cargo.toml  README.md  generate-docs.sh
libdonet/src/: byte_order.rs  datagram.rs  dcarray.rs  dcatomic.rs  dcattribute.rs  dcfield.rs  dcfile.rs  dckeyword.rs  dclass.rs  dclexer.rs  dcmolecular.rs  dcnumeric.rs  dconfig.rs  dcparameter.rs  dcparser.rs  dcstruct.rs  dcswitch.rs  dctype.rs  dctypedef.rs  globals.rs  hashgen.rs  lib.rs  protocol.rs
(+165 files in other folders)
