[workspace]
members = [
    "libdonet",
    "bevy_donet",
    "donet"
]
default-members = [
    "libdonet",
    "donet"
]
resolver = "2"

[workspace.package]
license = "AGPL-3.0-only"
authors = [
    "Max Rodriguez <me@maxrdz.com>"
]
homepage = "https://gitlab.com/donet-server/donet/"
repository = "https://gitlab.com/donet-server/donet/"

[profile.release]
codegen-units = 1 # Best LLVM optimization
panic = "abort" # Remove unwind code on release
opt-level = 3
lto = true
strip = true
