[workspace]
resolver = "2"
members = [
    "donet",
    "donet-core",
]
default-members = [
    "donet",
    "donet-core",
]

[workspace.package]
license = "AGPL-3.0-or-later"
authors = [
    "Max Rodriguez <me@maxrdz.com>"
]
homepage = "https://www.donet-server.org"
repository = "https://gitlab.com/donet-server/donet/"

[profile.release]
codegen-units = 1 # Best LLVM optimization
panic = "abort" # Remove unwind code on release
opt-level = 3
lto = true
strip = true
