[workspace]
resolver = "2"
members = [
    "donet",
    "donet-core",
    "donet-database",
    "donet-daemon",
    "donet-event-logger",
    "donet-message-director",
    "donet-network",

    # Internal
    "functional-tests",
]
default-members = [
    "donet",
    "donet-core",
]

[workspace.dependencies]
log = { version = "0.4", features = ["std"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[workspace.package]
license = "AGPL-3.0-or-later"
authors = [
    "Max Rodriguez <me@maxrdz.com>"
]
homepage = "https://www.donet-server.org"
repository = "https://gitlab.com/donet-server/donet/"

[profile.release]
codegen-units = 1 # Best LLVM optimization
panic = "abort" # Remove unwind code on release
opt-level = 3
lto = true
strip = true
