[package]
name = "donet-core"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.donet-server.org/donet_core/"

[lib]
name = "donet_core"
path = "src/lib.rs"

[features]
default = ["datagram", "dcfile"]
full = ["datagram", "dcfile"]
datagram = ["dep:serde", "dep:strum"]
dcfile = ["dep:plex", "dep:multimap"]

[dependencies]
cfg-if = { workspace = true }
log = { workspace = true }
pretty_env_logger = { version = "0.5" }
anyhow = { version = "1.0" }
thiserror = { version = "1.0" }
plex = { version = "0.3", optional = true }
codespan = { version = "0.11", features = ["serialization"] }
codespan-reporting = { version = "0.11", features = ["serialization"] }
multimap = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
strum = { version = "0.25", features = ["derive"], optional = true }
strum_macros = { version = "0.25" }
