[package]
name = "donetd"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["donet", "dc", "networking", "server", "mmo"]
publish = false
readme = "README.md"

[features]
client-agent = ["requires_dc"]
message-director = ["dep:donet-message-director"]
state-server = ["requires_dc"]
database-server = ["requires_dc", "dep:donet-database"]
dbss = ["state-server"]
event-logger = ["dep:donet-event-logger"]
requires_dc = ["donet-core/dcfile", "donet-daemon/requires_dc"]
tokio_debugging = ["default", "dep:console-subscriber", "tokio/full", "tokio/tracing"]
dockerized = []
default = [
  "client-agent", "message-director",
  "state-server", "database-server",
  "dbss", "event-logger",
]

[dependencies]
donet-core = { version = "0.1.0", path = "../donet-core", default-features = false, features = ["datagram"] }
donet-daemon = { version = "0.1.0", path = "../donet-daemon", default-features = true }
donet-database = { version = "0.1.0", path = "../donet-database", optional = true }
donet-event-logger = { version = "0.1.0", path = "../donet-event-logger", optional = true }
donet-message-director = { version = "0.1.0", path = "../donet-message-director", optional = true }
cfg-if = "1"
console-subscriber = { version = "0.4", optional = true }
log = { workspace = true }
toml = "0.7"
tokio = { workspace = true, features = ["signal"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
