[package]
name = "functional-tests"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
publish = false
readme = "README.md"

[[test]]
name = "dc_file"

[[test]]
name = "el"

[[test]]
name = "md"

[dev-dependencies]
donet-core = { version = "0.1.0", path = "../donet-core", features = ["full"] }
donet-daemon = { version = "0.1.0", path = "../donet-daemon" }
glob = "0.3"
tokio = { workspace = true, features = ["macros", "time", "sync"] }
