[package]
name = "libdonet"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
strum = { version = "0.25", features = ["derive"] }
strum_macros = { version = "0.25" }
plex = { version = "0.3" }
multimap = { version = "0.9" }
