[package]
name = "libdonet"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
documentation = "https://docs.donet-server.org/libdonet/"

[lib]
name = "libdonet"

[features]
default = ["datagram", "dcfile"]
full = ["datagram", "dcfile"]
datagram = ["dep:serde", "dep:strum"]
dcfile = ["dep:plex", "dep:multimap"]

[dependencies]
# Conditional compilation utility
cfg-if = { version = "1.0.0" }
# Logging utility
log = { version = "0.4", features = ["std"] }
pretty_env_logger = { version = "0.5" }
# LALR(1) parser proc macro for DC parser
plex = { version = "0.3", optional = true }
# Used to store DC element properties
multimap = { version = "0.9", optional = true }
# Serialization
serde = { version = "1", features = ["derive"], optional = true }
strum = { version = "0.25", features = ["derive"], optional = true }
strum_macros = { version = "0.25" }
